--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <h1>Login</h1>
-<% if (message.error) { %>
+<% if (messages.error) { %>
     <% messages.error %>
 <% } %>
 <form action="/login" method="POST">
